--- a/project/package.json
+++ b/project/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
     "prisma": "^5.6.0"
   }
